# jarvis-voice-assistant

./: .gitignore  CHECK_EVERYTHING.py  CLEANUP_ROOT_PROFESSIONAL.bat  CLEAN_STRUCTURE.md  LICENSE  README.md  SHOW_SUMMARY.bat  START_JARVIS.bat  VIEW_STRUCTURE.bat  jarvis_simple_working.py  requirements.txt  simple_tts.py
apps/: __init__.py
apps/desktop_ui/: JarvisBridge.py  MainWindow.qml  Theme.qml  TrayIcon.py  __init__.py  main_qml.py  main_window.py  qmltheme.py
apps/wizard/: __init__.py  first_run.py
archive/: DEMO_JARVIS.bat  HOW_TO_USE_JARVIS.bat  JARVIS_NEO.bat  README.md  RUN_VAD.bat  install.bat  run_jarvis.bat  run_tests.bat  run_ui.bat  test_jarvis_interactive.bat  test_vad.bat  uninstall.bat
archive/demos/: QUICK_DEMO_VOICE.py  demo.py  demo_jарвис.py  demo_j坍 escal.py  quick_demo.py  simple_audio_test.py
archive/old-docs/: ANALYSIS_REPORT.md  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING_NEW.md  CPP_FIXES_APPLIED.md  CPP_HOOKS.md  DEPLOYMENT_CHECKLIST.md  FASTER_WHISPER_GUIDE.md  FEATURES.md  FILE_GUIDE.md  (+20 more)
config/: __init__.py  settings.example.yaml  settings.yaml
core/: __init__.py  autostart.py  metrics.py  permissions.py  reporter.py  secrets.py  updater.py  wizard.py
core/bindings/cpphooks/: CMakeLists.txt  audio_endpoint.cpp  audio_endpoint.h  bindings.cpp  windows_focus.cpp  windows_focus.h
docs/: README.md  STRUCTURE.md
packaging/: AppxManifest.xml  Jarvis.iss  build_msix.py
scripts/: bootstrap_dev.ps1  bootstrap_dev.sh
tests/: __init__.py  test_audio_capture.py  test_nlu.py  test_pipeline.py  test_stt.py  test_wake_word.py
(+181 files in other folders)
